--- a/delivery.html
+++ b/delivery.html
@@ -31,29 +31,29 @@
                         <div class="main_nav_toggle">
                             <span></span>
                         </div>
-                        <ul>
-                            <li>
-                                <a href="#">О пекарне</a>
-                            </li>
-                            <li>
-                                <a href="#" class="active">Доставка и оплата</a>
-                            </li>
-                            <li>
-                                <a href="#">Статьи</a>
-                            </li>
-                            <li>
-                                <a href="#">Акции</a>
-                            </li>
-                            <li>
-                                <a href="#">Отзывы</a>
-                            </li>
-                            <li>
-                                <a href="#">Вакансии</a>
-                            </li>
-                            <li>
-                                <a href="#">Контакты</a>
-                            </li>
-                        </ul>
+                      <ul>
+                        <li>
+                            <a href="about.html">О пекарне</a>
+                        </li>
+                        <li>
+                            <a href="delivery.html">Доставка и оплата</a>
+                        </li>
+                        <li>
+                            <a href="articles_main.html">Статьи</a>
+                        </li>
+                        <li>
+                            <a href="stock.html">Акции</a>
+                        </li>
+                        <li>
+                            <a href="reviews.html">Отзывы</a>
+                        </li>
+                        <li>
+                            <a href="vacancies_main.html">Вакансии</a>
+                        </li>
+                        <li>
+                            <a href="contacts.html">Контакты</a>
+                        </li>
+                    </ul>
                     </nav>
                     <div class="header_phone">
                         <a class="phone" href="tel:8(800)5551450">8 (800) 555 14 50</a>
