--- a/vacancies.html
+++ b/vacancies.html
@@ -33,25 +33,25 @@
                             </div>
                             <ul>
                                 <li>
-                                    <a href="#">О пекарне</a>
+                                    <a href="about.html">О пекарне</a>
                                 </li>
                                 <li>
-                                    <a href="#">Доставка и оплата</a>
+                                    <a href="delivery.html">Доставка и оплата</a>
                                 </li>
                                 <li>
-                                    <a href="#">Статьи</a>
+                                    <a href="articles_main.html">Статьи</a>
                                 </li>
                                 <li>
-                                    <a href="#">Акции</a>
+                                    <a href="stock.html">Акции</a>
                                 </li>
                                 <li>
-                                    <a href="#">Отзывы</a>
+                                    <a href="reviews.html">Отзывы</a>
                                 </li>
                                 <li>
-                                    <a class="active" href="#">Вакансии</a>
+                                    <a href="vacancies_main.html">Вакансии</a>
                                 </li>
                                 <li>
-                                    <a href="#">Контакты</a>
+                                    <a href="contacts.html">Контакты</a>
                                 </li>
                             </ul>
                         </nav>
