--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                         </div>
                          <ul>
                             <li>
-                                <a href="about.html">О пекарне</a>
+                                <a href="about.html" class="active>О пекарне</a>
                             </li>
                             <li>
                                 <a href="delivery.html">Доставка и оплата</a>
