--- a/articles_main.html
+++ b/articles_main.html
@@ -39,7 +39,7 @@
                             <a href="delivery.html">Доставка и оплата</a>
                         </li>
                         <li>
-                            <a href="articles_main.html">Статьи</a>
+                            <a href="articles_main.html" class="active">Статьи</a>
                         </li>
                         <li>
                             <a href="stock.html">Акции</a>
