--- a/contacts.html
+++ b/contacts.html
@@ -51,7 +51,7 @@
                                 <a href="vacancies_main.html">Вакансии</a>
                             </li>
                             <li>
-                                <a href="contacts.html">Контакты</a>
+                                <a href="contacts.html" class="active">Контакты</a>
                             </li>
                         </ul>
                     </nav>
