--- a/delivery.html
+++ b/delivery.html
@@ -36,7 +36,7 @@
                             <a href="about.html">О пекарне</a>
                         </li>
                         <li>
-                            <a href="delivery.html">Доставка и оплата</a>
+                            <a href="delivery.html" class="active">Доставка и оплата</a>
                         </li>
                         <li>
                             <a href="articles_main.html">Статьи</a>
