--- a/reviews.html
+++ b/reviews.html
@@ -45,7 +45,7 @@
                                 <a href="stock.html">Акции</a>
                             </li>
                             <li>
-                                <a href="reviews.html">Отзывы</a>
+                                <a href="reviews.html" class="active">Отзывы</a>
                             </li>
                             <li>
                                 <a href="vacancies_main.html">Вакансии</a>
