--- a/stock.html
+++ b/stock.html
@@ -42,7 +42,7 @@
                                     <a href="articles_main.html">Статьи</a>
                                 </li>
                                 <li>
-                                    <a href="stock.html">Акции</a>
+                                    <a href="stock.html" class="active">Акции</a>
                                 </li>
                                 <li>
                                     <a href="reviews.html">Отзывы</a>
