--- a/vacancies.html
+++ b/vacancies.html
@@ -48,7 +48,7 @@
                                     <a href="reviews.html">Отзывы</a>
                                 </li>
                                 <li>
-                                    <a href="vacancies_main.html">Вакансии</a>
+                                    <a href="vacancies_main.html" class="active">Вакансии</a>
                                 </li>
                                 <li>
                                     <a href="contacts.html">Контакты</a>
